# FastApi-dependency_injector-rabbimq

./: Dockerfile  README.md  containers.py  docker-compose.yml  main.py  pyproject.toml
api/: end_point.py
background/: receiver.py
